# SigNow_ONS_Turing

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.cfg
notebooks/: signow_walkthrough.ipynb  signow_walkthrough.py  walkthrough_helper_funcs.py
src/signow/: data_generator.py  signature_estimators.py  signature_nowcasting.py  signature_transformers.py  timeseries_data.py
src/signow/signature_functions/: compute_linear_sigs.py  signature_helper_funcs.py
src/signow/utils/: validation.py
tests/: conftest.py  test_signature_helper_funcs.py  test_signature_nowcasting.py  test_signature_transformers.py  test_system.py  test_timeseries_data.py
tests/compute_linear_sigs/: test_all_sig_keys.py  test_computesigs_rectilinear.py  test_computesubframe.py  test_find_sigs.py  test_find_single_sig_ind.py  test_select_sigs_find_lin_sigs_feat.py
